Fix slider thumb vertical centering with 0px track height
- Set track height to 0px (invisible line)
- Use negative margin-top on thumbs to center perfectly
  - Default: margin-top: -20px (40px thumb / 2)
  - Mobile: margin-top: -16px (32px thumb / 2)
  - Compact: margin-top: -14px (28px thumb / 2)
- Thumb now has equal spacing above and below

--- a/css/controls.css
+++ b/css/controls.css
@@ -113,13 +113,13 @@ input[type="range"]::-webkit-slider-thumb {
     appearance: none;
     width: 40px;
     height: 40px;
+    margin-top: -20px;
     border-radius: 50%;
     background: white;
     border: 4px solid var(--primary);
     box-shadow: var(--shadow-md);
     cursor: pointer;
     transition: all var(--transition-base);
-    margin-top: -20px;
 }
 
 input[type="range"]::-webkit-slider-thumb:hover {
@@ -136,13 +136,14 @@ input[type="range"]::-webkit-slider-thumb:active {
 input[type="range"]::-moz-range-thumb {
     width: 40px;
     height: 40px;
+    margin-top: -20px;
     border-radius: 50%;
     background: white;
     border: 4px solid var(--primary);
     box-shadow: var(--shadow-md);
     cursor: pointer;
     transition: all var(--transition-base);
-    margin-top: -20px;
+    border: none;
 }
 
 input[type="range"]::-moz-range-thumb:hover {
@@ -154,7 +155,7 @@ input[type="range"]::-moz-range-thumb:hover {
 /* Range Track - Webkit */
 input[type="range"]::-webkit-slider-runnable-track {
     width: 100%;
-    height: 60px;
+    height: 0px;
     background: transparent;
     border: none;
 }
@@ -162,7 +163,7 @@ input[type="range"]::-webkit-slider-runnable-track {
 /* Range Track - Firefox */
 input[type="range"]::-moz-range-track {
     width: 100%;
-    height: 60px;
+    height: 0px;
     background: transparent;
     border: none;
 }
@@ -193,11 +194,11 @@ input[type="range"]::-moz-range-track {
 }
 
 .slider-track.compact input[type="range"]::-webkit-slider-runnable-track {
-    height: 40px;
+    height: 0px;
 }
 
 .slider-track.compact input[type="range"]::-moz-range-track {
-    height: 40px;
+    height: 0px;
 }
 
 .slider-track.compact input[type="range"]::-webkit-slider-thumb {
@@ -288,11 +289,11 @@ input[type="range"]:disabled::-moz-range-thumb {
     }
 
     input[type="range"]::-webkit-slider-runnable-track {
-        height: 50px;
+        height: 0px;
     }
 
     input[type="range"]::-moz-range-track {
-        height: 50px;
+        height: 0px;
     }
 
     input[type="range"]::-webkit-slider-thumb {
